--- a/AppleProduct/index.html
+++ b/AppleProduct/index.html
@@ -72,7 +72,7 @@
 <body>
     <div class="container mt-5">
         <div class="row">
-            <div class="col-6">
+            <div class="col-12 col-lg-6">
                 <div id="productImg" class="col-12">
                     <img src="img/silver.png" class="w-100">
                 </div>
@@ -87,7 +87,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-12 col-lg-6">
                 <h2>購買 iPad</h2>
                 <p>購買 iPad 可享免額外付費運送服務。</p>
 
