--- a/calculator/index.html
+++ b/calculator/index.html
@@ -32,12 +32,12 @@
 
     <div class="container mt-3">
         <div class="row justify-content-center">
-            <h2 class="col-6 border border-warning rounded text-center text-warning p-2">Calculator <i
+            <h2 class="col-12 col-lg-6 border border-warning rounded text-center text-warning p-2">Calculator <i
                     class="fas fa-calculator"></i></h2>
         </div>
 
         <div class="row justify-content-center">
-            <div class="col-6 d-flex flex-wrap text-right text-warning">
+            <div class="col-12 col-lg-6 d-flex flex-wrap text-right text-warning">
                 <div class="col-12 my-1" id="recordBlock">
                     <button class="btn btn-dark btn-sm text-warning border border-warning" data-toggle="modal" data-target="#exampleModalCenter"><i
                             class="fas fa-history"></i></button>
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="row justify-content-center text-center">
-            <div class="col-6 d-flex flex-wrap">
+            <div class="col-12 col-lg-6 d-flex flex-wrap">
                 <div class="col-3 my-1">
                     <button class="btn btn-outline-warning btn-block border border-warning py-3 operator" id="%"><i
                             class="fas fa-percentage"></i></button>
@@ -150,7 +150,7 @@
         </div>
 
         <div class="row justify-content-center">
-            <h2 class="col-6 border border-warning rounded text-center text-warning p-2 mt-3">&copy; By Tim Chen <a
+            <h2 class="col-12 col-lg-6 border border-warning rounded text-center text-warning p-2 mt-3">&copy; By Tim Chen <a
                     href="https://github.com/TimChen0409" target="_blank" class="text-warning"><i
                         class="fab fa-github"></i></a></h2>
         </div>
