--- a/NapoliPizza/index.html
+++ b/NapoliPizza/index.html
@@ -17,7 +17,7 @@
 <body class="bg-light">
 
     <div class="container">
-        <div class="jumbotron h3 text-warning text-center">Pizza Template</div>
+        <div class="h1 text-warning text-center my-5">Pizza Template</div>
         <div class="row">
         </div>
     </div>
