--- a/index.html
+++ b/index.html
@@ -52,7 +52,16 @@
                 <a href="TAKEN/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/16</span>TAKEN切版(使用Bootstrap、含RWD)</a>
             </li>
             <li class="list-group-item">
-                <a href="AppleProduct/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/23</span>Apple產品塊JS-DOM事件練習</a>
+                <a href="AppleProduct/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/23</span>Apple產品塊(DOM事件監聽)</a>
+            </li>
+            <li class="list-group-item">
+                <a href="1A2B/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/24</span>1A2B遊戲</a>
+            </li>
+            <li class="list-group-item">
+                <a href="calculator/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/24</span>計算機實作</a>
+            </li>
+            <li class="list-group-item">
+                <a href="NapoliPizza/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/27</span>Pizza Card(AJAX)</a>
             </li>
         </ul>
 
