--- a/NapoliPizza/index.html
+++ b/NapoliPizza/index.html
@@ -15,10 +15,22 @@
 </head>
 
 <body class="bg-light">
-
     <div class="container">
         <div class="h1 text-warning text-center my-5">Pizza Template</div>
         <div class="row">
+            <div class="col-3">
+                <div class="list-group">
+                    <button type="button" class="list-group-item list-group-item-action active">披薩口味</button>
+                    <button type="button" class="list-group-item list-group-item-action">MINI披薩</button>
+                    <button type="button" class="list-group-item list-group-item-action">獨門雞料理</button>
+                    <button type="button" class="list-group-item list-group-item-action">精選美食</button>
+                </div>
+            </div>
+            <div class="col-9">
+                <div class="row" id="pdBlock">
+
+                </div>
+            </div>
         </div>
     </div>
 
@@ -86,7 +98,7 @@
 
     <script type='module'>
         import { $g, $c } from '../NapoliPizza/Modules/helpers.js';
-        let row = $g('.row');
+        let pdBlock = $g('#pdBlock');
         let xhr = new XMLHttpRequest();
         let msg = $g("#msg");
         const url = 'https://raw.githubusercontent.com/TimChen0409/FileStorage/master/Pizza.json';
@@ -105,6 +117,7 @@
         }
 
         function renderData(dataArray) {
+            clearAllData();
             let card = $g('#cardPizza');
             dataArray.forEach(element => {
                 let cloneContent = card.content.cloneNode(true);
@@ -123,8 +136,12 @@
                     modal.querySelector('#description').innerText = element.description;
                     modal.querySelector('#price').innerText = element.price;
                 });
-                row.append(cloneContent);
+                pdBlock.append(cloneContent);
             });
+        }
+
+        function clearAllData() {
+            pdBlock.innerHTML = '';
         }
     </script>
 </body>
