--- a/NapoliPizza/index.html
+++ b/NapoliPizza/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <template id='cardPizza'>
-        <div class="col-6 col-lg-4 card border mb-2 overflow-hidden wow bounceInUp" data-wow-duration="2s"
+        <div class="col-6 col-lg-4 card border mb-3 overflow-hidden wow bounceInUp" data-wow-duration="2s"
             style="width: 18rem;">
             <img src="" class="card-img-top" alt="...">
             <div class="card-body bg-warning">
@@ -67,7 +67,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="text-center">
-                        <img id="pizzaImage">
+                        <img id="pizzaImage" class="w-100">
                     </div>
                     <hr>
                     <div class="mt-3">
