--- a/NapoliPizza/index.html
+++ b/NapoliPizza/index.html
@@ -41,11 +41,9 @@
         <div class="col-6 col-lg-4 card border mb-2 overflow-hidden wow bounceInUp" data-wow-duration="1s"
             style="width: 18rem;">
             <img src="" class="card-img-top" alt="...">
-            <div class="card-body d-flex justify-content-between">
-                <div class="name">
-                    <h5 class="card-title text-success"></h5>
-                    <p class="card-text"></p>
-                </div>
+            <div class="card-body">
+                <h5 class="card-title text-success"></h5>
+                <p class="card-text"></p>
                 <div class="text-center">
                     <button href="#" class="btn btn-info">詳細內容</a>
                 </div>
