--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
             <li class="list-group-item">
                 <a href="NapoliPizza/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/27</span>Pizza Card(AJAX)</a>
             </li>
+            <li class="list-group-item">
+                <a href="MaskMap/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/30</span>MaskMap</a>
+            </li>
         </ul>
 
     </div>
