--- a/MaskMap/index.html
+++ b/MaskMap/index.html
@@ -155,7 +155,7 @@
                     var myLatLng = { lat: position.coords.latitude, lng: position.coords.longitude };
                     var marker = new google.maps.Marker({
                         position: myLatLng,
-                        icon: 'http://maps.google.com/mapfiles/kml/pushpin/wht-pushpin.png',
+                        icon: 'http://earth.google.com/images/kml-icons/track-directional/track-8.png',
                         map: map
                     });
                     map.setCenter(myLatLng);
