--- a/MaskMap/index.html
+++ b/MaskMap/index.html
@@ -71,8 +71,8 @@
                     <i class="fas fa-eye" data-lat="" data-lng=""></i>
                 </div>
                 <div class="card-body">
-                    <p class="my-1 h5 text-danger"><span id="adult">成人口罩數量：</span></p>
-                    <p class="my-1 h5 text-danger"><span id="child">兒童口罩數量：</span></p>
+                    <p class="my-1 h5 text-danger"><span id="adult"></span></p>
+                    <p class="my-1 h5 text-danger"><span id="child"></span></p>
                     <p class="my-1 h6">
                         <i class="fas fa-map-marked-alt"></i>
                         <a target="_blank" href="" class="text-info" id="address"></a>
