--- a/index.html
+++ b/index.html
@@ -33,37 +33,48 @@
     <div class="container">
         <ul class="list-group py-2">
             <li class="list-group-item">
-                <a href="curriculum/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/06/24</span>國小課表Table手刻練習</a>
+                <a href="curriculum/index.html" target="_blank" class="text-primary h4"><span
+                        class="badge badge-primary mx-2">2020/06/24</span>國小課表Table手刻練習</a>
             </li>
             <li class="list-group-item">
-                <a href="Anilove/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/06/29</span>Anilove網站切版(無RWD)</a>
+                <a href="Anilove/index.html" target="_blank" class="text-primary h4"><span
+                        class="badge badge-primary mx-2">2020/06/29</span>Anilove網站切版(無RWD)</a>
             </li>
             <li class="list-group-item">
-                <a href="Naturio/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/03</span>Naturio網站切版(無RWD)</a>
+                <a href="Naturio/index.html" target="_blank" class="text-primary h4"><span
+                        class="badge badge-primary mx-2">2020/07/03</span>Naturio網站切版(無RWD)</a>
             </li>
             <li class="list-group-item">
-                <a href="Toyota/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/06</span>TOYOTA切版_Position練習(無RWD)</a>
+                <a href="Toyota/index.html" target="_blank" class="text-primary h4"><span
+                        class="badge badge-primary mx-2">2020/07/06</span>TOYOTA切版_Position練習(無RWD)</a>
             </li>
             <li class="list-group-item">
-                <a href="BuildSchool-remake/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/09</span>BuildSchool官網復刻切版(有RWD)</a>
+                <a href="BuildSchool-remake/index.html" target="_blank" class="text-primary h4"><span
+                        class="badge badge-primary mx-2">2020/07/09</span>BuildSchool官網復刻切版(有RWD)</a>
             </li>
             <li class="list-group-item">
-                <a href="TAKEN/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/16</span>TAKEN切版(使用Bootstrap、含RWD)</a>
+                <a href="TAKEN/index.html" target="_blank" class="text-primary h4"><span
+                        class="badge badge-primary mx-2">2020/07/16</span>TAKEN切版(使用Bootstrap、含RWD)</a>
             </li>
             <li class="list-group-item">
-                <a href="AppleProduct/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/23</span>Apple產品塊(DOM事件監聽)</a>
+                <a href="AppleProduct/index.html" target="_blank" class="text-primary h4"><span
+                        class="badge badge-primary mx-2">2020/07/23</span>Apple產品塊(DOM事件監聽)</a>
             </li>
             <li class="list-group-item">
-                <a href="1A2B/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/24</span>1A2B遊戲</a>
+                <a href="1A2B/index.html" target="_blank" class="text-primary h4"><span
+                        class="badge badge-primary mx-2">2020/07/24</span>1A2B遊戲</a>
             </li>
             <li class="list-group-item">
-                <a href="calculator/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/24</span>計算機實作</a>
+                <a href="calculator/index.html" target="_blank" class="text-primary h4"><span
+                        class="badge badge-primary mx-2">2020/07/24</span>計算機實作</a>
             </li>
             <li class="list-group-item">
-                <a href="NapoliPizza/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/27</span>Pizza Card(AJAX)</a>
+                <a href="NapoliPizza/index.html" target="_blank" class="text-primary h4"><span
+                        class="badge badge-primary mx-2">2020/07/27</span>Pizza Card(AJAX)</a>
             </li>
             <li class="list-group-item">
-                <a href="MaskMap/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/30</span>MaskMap口罩地圖</a>
+                <a href="MaskMap/index.html" target="_blank" class="text-primary h4"><span
+                        class="badge badge-primary mx-2">2020/07/30</span>MaskMap口罩地圖</a>
             </li>
         </ul>
 
@@ -74,9 +85,7 @@
         <a href="https://github.com/timchen0409" target="_blank"><i class="fab fa-github text-secondary"></i></a>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
