--- a/Sliding-Puzzle-Game/index.html
+++ b/Sliding-Puzzle-Game/index.html
@@ -1,25 +1,169 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Sliding Puzzle Game</title>
-  </head>
-  <body>
-      <div class="container">
-          
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap"
+    rel="stylesheet">
+
+  <link rel="stylesheet" href="style.css">
+
+
+  <title>Sliding Puzzle Game</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="my-4">
+      <div class="input-group">
+        <div class="custom-file">
+          <input type="file" class="custom-file-input" id="uploadImg" accept="image/*">
+          <label class="custom-file-label" for="uploadImg">請選擇圖片檔案...</label>
+        </div>
       </div>
-    
+      <small class="ml-2 text-secondary">請上傳長寬約比1:1之圖片</small>
+    </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-  </body>
+    <div class="settings mb-2">
+      <span class="text-danger">請選擇難度：</span>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="3" checked>
+        <label class="form-check-label" for="inlineRadio1">3*3</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="4">
+        <label class="form-check-label" for="inlineRadio2">4*4</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="5">
+        <label class="form-check-label" for="inlineRadio3">5*5</label>
+      </div>
+    </div>
+    <button id="shuffleBtn" class="btn btn-info mb-2" disabled>隨機排序</button>
+    <button id="resetBtn" class="btn btn-danger mb-2" disabled>重新再來</button>
+
+    <div class="row">
+      <div class="col-12 col-lg-6">
+        <div id="gameMap" class="d-flex">
+          <div class="row m-0">
+
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-lg-6">
+        <div class="row">
+          <div class="col-12">
+            <div id="showImgBlock">
+              <img src="" id="imgPreview" class="border border-success w-100">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
+
+  <script>
+    let uploadImg = document.querySelector("#uploadImg");
+    let gameMapContent = document.querySelector("#gameMap .row");
+    let imgPreview = document.querySelector("#imgPreview");
+    let resetBtn = document.querySelector("#resetBtn");
+    let shuffleBtn = document.querySelector("#shuffleBtn");
+    let Options = document.querySelectorAll(".form-check-input");
+    let puzzles = document.querySelectorAll(".puzzle");
+    //let puzzles = [];
+    uploadImg.addEventListener('change', startGame);
+    //shuffleBtn.addEventListener('click', setRandomPosition);
+    resetBtn.addEventListener('click', resetGame);
+
+
+
+
+    function startGame() {
+      let selectedSize = getRadioValue();
+      let selectedImg = this.files[0];//inputfile上傳的資料會在files[0]
+      const imgUrl = URL.createObjectURL(selectedImg);//讓該圖片產生url
+      imgPreview.src = imgUrl;
+      uploadImg.disabled = true;
+      Options.forEach(x => {
+        x.disabled = true;
+      })
+      shuffleBtn.disabled = false;
+      resetBtn.disabled = false;
+
+      gameMapContent.classList.add("border");
+      createPuzzles(imgUrl, selectedSize);
+      //setRandomPosition();
+    }
+
+    function getRadioValue() {
+      let val;
+      Options.forEach(x => {
+        if (x.checked) {
+          val = x.value;
+        }
+      })
+      return val;
+    }
+
+    function resetGame() {
+      uploadImg.value = '';//清空input的value，這樣選同一張圖片才能觸發change事件
+      puzzles.length = 0;
+      imgPreview.src = "";
+      gameMapContent.innerHTML = '';
+      uploadImg.disabled = false;
+      Options.forEach(x => {
+        x.disabled = false;
+      })
+      shuffleBtn.disabled = true;
+      resetBtn.disabled = true;
+      gameMapContent.classList.remove("border");
+    }
+
+    function createPuzzles(imgUrl, size) {
+      for (let i = 0; i < size; i++) {
+        for (let j = 0; j < size; j++) {
+          let div = document.createElement("div");
+          let puzzleSize = (500 / size);
+
+          div.classList.add("border", "puzzle", `puzzle${(i + 1) + '' + (j + 1)}`);
+          div.style.height = `${puzzleSize}px`;
+          div.style.width = `${puzzleSize}px`;
+          div.style.backgroundImage = `url('${imgUrl}')`;
+          div.style.backgroundPosition = `${Math.floor(i) * puzzleSize}px ${Math.floor(j) * puzzleSize}px`;
+          //puzzles.push(div);
+          gameMapContent.append(div)
+
+        }
+      }
+    }
+
+    // function setRandomPosition() {
+    //   //如果排序時，給定任兩個數字(a, b)，隨機回傳一個介於-0.5 ~ +0.5的數值，表示任兩個數字之間的大小相對關係是隨機的。
+    //   //let randomPuzzles = Array.from(puzzles).sort(() => Math.random() - 0.5);
+    //   randomPuzzles.forEach(x => {
+    //   });
+    // }
+
+
+  </script>
+</body>
+
 </html>
